// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RIDB React Components > Data Operations > shows correct states during data operations > MockDataComponent-data-ready-state 1`] = `
<div>
  <div
    data-testid="data-ready"
  >
    <h1>
      Data Operations Complete
    </h1>
    <div
      data-testid="user-data"
    >
      John Doe (Age: 30)
    </div>
  </div>
</div>
`;

exports[`RIDB React Components > Data Operations > shows correct states during data operations > MockDataComponent-loading-state 1`] = `
<div>
  <div
    data-testid="loading"
  >
    Loading database...
  </div>
</div>
`;

exports[`RIDB React Components > MyComponent > renders loading state initially > MyComponent-loading-state 1`] = `
<div>
  <div
    data-testid="loading"
  >
    Database is initializing...
  </div>
</div>
`;

exports[`RIDB React Components > MyComponent > renders successfully when database is ready > MyComponent-ready-state 1`] = `
<div>
  <div
    data-testid="ready-component"
  >
     
    <h1>
      My Component
    </h1>
     
  </div>
</div>
`;
